chore: prevent `header-max-length` lint error for `commitlint`

--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
         2,
         "always",
         200
+      ],
+      "header-max-length": [
+        2,
+        "always",
+        120
       ]
     }
   }
