fix: `update-semver-tag` input for `nodejs-release-reusable` workflow
Updating semver tags should be skipped when creating draft releases,
since draft releases have not created any tags yet.

--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -113,7 +113,7 @@ jobs:
           fi
 
       - name: Update semver tag
-        if: ${{ inputs.update-semver-tag }}
+        if: ${{ !inputs.draft && inputs.update-semver-tag }}
         env:
           NEW_TAG: ${{ steps.create-tag.outputs.new-tag }}
         run: |
