fix: fine-tune release notes

--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -95,8 +95,10 @@ jobs:
           prev_tag_name=$(gh release view --json tagName --jq .tagName || echo '')
 
           if [[ -n "${prev_tag_name}" ]]; then
-            echo '' >> "${notes_file}"
-            echo "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/compare/${prev_tag_name}...${NEW_TAG}" >> "${notes_file}"
+            (
+              echo ''
+              echo "Compare: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/compare/${prev_tag_name}...${NEW_TAG}"
+            ) >> "${notes_file}"
           fi
 
           if [[ "${DRAFT_RELEASE}" == "true" ]]; then
