--- a/.github/workflows/dependabot-auto-merge-reusable.yml
+++ b/.github/workflows/dependabot-auto-merge-reusable.yml
@@ -17,9 +17,10 @@ on:
 jobs:
   auto-merge:
     if: ${{ github.actor == 'dependabot[bot]' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     permissions:
       contents: write
+    timeout-minutes: 10
     steps:
       - name: Fetch Dependabot metadata
         id: metadata
