--- a/.github/workflows/nodejs-release-pr-reusable.yml
+++ b/.github/workflows/nodejs-release-pr-reusable.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   release-pr:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     permissions:
       contents: write
       pull-requests: write
