--- a/.github/workflows/ruby-test-reusable.yml
+++ b/.github/workflows/ruby-test-reusable.yml
@@ -55,7 +55,7 @@ jobs:
 
   lint:
     timeout-minutes: 10
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
