fix: improve auto-version detection in `nodejs-release-pr-reusable`
The current implementation doesn't consider patterns with a scope, such as `feat(deps):`.
This fixes the bug in the regex.

Follow-up on PR #106

--- a/.github/workflows/nodejs-release-pr-reusable.yml
+++ b/.github/workflows/nodejs-release-pr-reusable.yml
@@ -61,9 +61,9 @@ jobs:
           fi
 
           # Determine a version based on conventional commits
-          if echo "${commits}" | grep -qE '^feat!:'; then
+          if echo "${commits}" | grep -qE '^feat(.+)?!:'; then
             version_type="major"
-          elif echo "${commits}" | grep -qE '^feat:'; then
+          elif echo "${commits}" | grep -qE '^feat(.+)?:'; then
             version_type="minor"
           else
             version_type="patch"
