--- a/.github/workflows/ruby-release-reusable.yml
+++ b/.github/workflows/ruby-release-reusable.yml
@@ -31,7 +31,7 @@ jobs:
           bundler-cache: true
 
       - name: Publish gem to RubyGems.org
-        uses: rubygems/release-gem@v1
+        uses: rubygems/release-gem@1c162a739e8b4cb21a676e97b087e8268d8fc40b # v1.1.2
 
       - name: Create GitHub release
         run: |
