ci: improve GitHub Release creation

--- a/.github/workflows/ruby-release-reusable.yml
+++ b/.github/workflows/ruby-release-reusable.yml
@@ -34,8 +34,11 @@ jobs:
         uses: rubygems/release-gem@1c162a739e8b4cb21a676e97b087e8268d8fc40b # v1.1.2
 
       - name: Create GitHub release
-        run: |
-          tag_name="$(git describe --tags --abbrev=0)"
-          gh release create "${tag_name}" --verify-tag --draft
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          new_tag="$(git describe --tags --abbrev=0)"
+          gh release create "${new_tag}" --verify-tag --draft
+
+          release_url=$(gh release view "${new_tag}" --json 'url' --jq '.url')
+          echo "::notice::Created the draft release: ${release_url}"
