--- a/.github/workflows/ruby-release-reusable.yml
+++ b/.github/workflows/ruby-release-reusable.yml
@@ -8,20 +8,13 @@ on:
         required: false
         default: "ruby" # latest
         type: string
-      otp:
-        description: One-time password for RubyGems.org
-        required: true
-        type: string
-    secrets:
-      api-key:
-        description: API key for RubyGems.org
-        required: true
 
 jobs:
   release:
     runs-on: ubuntu-slim
     permissions:
       contents: write
+      id-token: write
     timeout-minutes: 10
     concurrency: ${{ github.workflow }}
     defaults:
@@ -37,20 +30,15 @@ jobs:
           ruby-version: ${{ inputs.ruby-version }}
           bundler-cache: true
 
-      - name: Set up Git
-        run: |
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
-
-      - name: Release gem
-        run: bundle exec rake release
-        env:
-          GEM_HOST_API_KEY: ${{ secrets.api-key }}
-          GEM_HOST_OTP_CODE: ${{ inputs.otp }}
+      - name: Publish gem to RubyGems.org
+        uses: rubygems/release-gem@1c162a739e8b4cb21a676e97b087e8268d8fc40b # v1.1.2
 
       - name: Create GitHub release
-        run: |
-          tag_name="$(git describe --tags --abbrev=0)"
-          gh release create "${tag_name}" --verify-tag --draft
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          new_tag="$(git describe --tags --abbrev=0)"
+          gh release create "${new_tag}" --verify-tag --draft
+
+          release_url=$(gh release view "${new_tag}" --json 'url' --jq '.url')
+          echo "::notice::Created the draft release: ${release_url}"
